compiler/eight-tests/tests/snapshots/ui_tests__compiler_ui_tests@type__if_no_boolean_cond.test.snap
---
source: compiler/eight-tests/tests/ui_tests.rs
info:
  program: eightc
  args:
    - tests/ui/type/if_no_boolean_cond.test
input_file: compiler/eight-tests/tests/ui/type/if_no_boolean_cond.test
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: sema::type_mismatch

  × type mismatch
   ╭─[tests/ui/type/if_no_boolean_cond.test:2:7]
 1 │ fn test() {
 2 │   if (123) {
   ·       ─┬─┬
   ·        │ ╰── expected type bool
   ·        ╰── the expression has type i32
 3 │     let z = 123;
   ╰────
